--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.default.includePath": [
         "d:\\dev\\MetaTrader\\MQL5\\Include",
-        "d:\\dev\\MetaTrader\\MQL4\\Include"
+        "d:\\dev\\MetaTrader\\MQL4\\Include",
+        "d:\\dev\\git\\MetaTrader\\MQL5\\Include"
     ]
 }
