--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "d:\\dev\\git\\MetaTrader\\Include",
         "d:\\dev\\git\\MetaTrader\\mql\\Include",
         "d:\\dev\\git\\MetaTrader\\mql4\\Include",
-        "d:\\dev\\git\\MetaTrader\\mql5\\Include"
+        "d:\\dev\\git\\MetaTrader\\mql5\\Include",
+        "d:\\dev\\git\\metatrader\\mql5\\Include"
     ]
 }
